2006-11-01  Mark McLoughlin  <mark@skynet.ie>

	Flesh out the inotify support. Not enabled by default until
	it gets a tad more testing. Closes bug #314854

	* configure.in: add --enable-inotify
	
	* libmenu/Makefile.am: build menu-monitor-inotify.c if inotify
	is enabled.
	
	* libmenu/menu-monitor-inotify.c: implement lots more of this.
	See TODO list at the top of the file.

2006-11-01  Mark McLoughlin  <mark@skynet.ie>

	* libmenu/gmenu-tree.c:
	(gmenu_tree_entry_get_launch_in_terminal): fix compile
	warning
	
2006-11-01  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: bump version to 2.17.1 - 2.16
	development continues on the gnome-2-16 branch

2006-10-02  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.16.2.

==================== 2.16.1 ====================

2006-10-02  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.16.1.

2006-09-04  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.16.1.

==================== 2.16.0 ====================

2006-09-04  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.16.0.

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.15.92.

==================== 2.15.91 ====================

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.15.91.

2006-07-24  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.15.91.

==================== 2.15.90 ====================

2006-07-24  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.15.90.

2006-07-11  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.15.5.

==================== 2.15.4.1 ====================

2006-07-11  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.15.4.1.

2006-07-11  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.15.5.
